# The-Knight

./: .gitignore  CMakeLists.txt  main.cpp
Entities/: Entity.cpp  Entity.h
Entities/Enemies/: HellHound.cpp  HellHound.h
Entities/Envirament/: Platform.cpp  Platform.h  PlatformEag.cpp  PlatformEag.h
Entities/Player/: Player.cpp  Player.h
Entities/particle/: BloodSplash.cpp  BloodSplash.h
Entities/particle/HellHoundGore/: HellHoundGore.cpp  HellHoundGore.h
Game/: GameManager.cpp  GameManager.h  common.hpp
Game/Entities/: Entity.cpp  Entity.h
Game/Entities/Enemies/: Enemy.cpp  Enemy.h
Game/Entities/Enemies/EnemyVariants/: HellHound.cpp  HellHound.h
Game/Entities/Envirament/: Platform.cpp  PlatformEag.cpp  PlatformEag.h
Game/Entities/Player/: Player.cpp  Player.h
Game/Entities/particle/: BloodSplash.cpp  BloodSplash.h
Game/Entities/particle/HellHoundGore/: HellHoundGore.cpp  HellHoundGore.h
Game/Entities/souls/: Soul.cpp  Soul.h
Game/Entities/souls/SoulsVariants/: NarunSoul.cpp  NarunSoul.h
Game/Insertors/: InsertEntity.cpp
Game/Managers/: AudioAndMusicManager.cpp  AudioAndMusicManager.h  BackGroundManager.cpp  BackGroundManager.h  DrawManager.cpp  DrawManager.h  EntityManager.cpp  EntityManager.h  EnvironmenAndPhysicsManager.cpp  EnvironmenAndPhysicsManager.h  ParticalManager.cpp  ParticalManager.h  SpawnManager.cpp  SpawnManager.h  SpriteManager.cpp  SpriteManager.h  TextureManager.cpp
Game/UIdirectory/: UIManager.cpp  UIManager.h
Game/UIdirectory/UI/: PlayerUIStamina.cpp  PlayerUIStamina.h
Insertors/: InsertEntity.cpp  InsertEntity.h
Managers/: AudioAndMusicManager.cpp  AudioAndMusicManager.h  BackGroundManager.cpp  BackGroundManager.h  CameraManager.cpp  CameraManager.h  DrawManager.cpp  DrawManager.h  EntityManager.cpp  EntityManager.h  EnvironmenAndPhysicsManager.cpp  EnvironmenAndPhysicsManager.h  ParticalManager.h  SpawnManager.cpp  SpawnManager.h  SpriteManager.cpp  SpriteManager.h  TextureManager.cpp  TextureManager.h
UIdirectory/: UIManager.cpp  UIManager.h
UIdirectory/UI/: PlayerUIHP.cpp  PlayerUIHP.h  PlayerUIStamina.cpp  PlayerUIStamina.h
